--- a/editor/templates/table_display.html
+++ b/editor/templates/table_display.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Table Display</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
@@ -19,6 +20,7 @@
   <div id="addNewRecordButton">
     <button class="btn btn-primary" data-toggle="modal" data-target="#addRecordModal">+</button>
   </div>
+  <input type="hidden" id="deleteRecordId">
   <div class="container-fluid">
     <h1>Table Display</h1>
     <table id="dataTable" class="table table-striped table-bordered">
@@ -34,6 +36,7 @@
           <th>Extra Prop</th>
           <th>Target Related Extra Prop</th>
           <th>Related Extra Prop</th>
+          <th>Operations</th>
         </tr>
       </thead>
       <tbody>
@@ -49,10 +52,39 @@
           <td class="editable" onclick="editTwoFields(this, {{ config.id }})" data-target-extra-prop="{{ config.target_extra_prop }}" data-extra-prop="{{ config.extra_prop }}" id="row-{{ config.id }}-extra_prop">{{ config.extra_prop }}</td>
           <td class="editable" onclick="editTwoRelatedFields(this, {{ config.id }})" data-target-related-extra-prop="{{ config.target_related_extra_prop }}" data-related-extra-prop="{{ config.related_extra_prop }}" id="row-{{ config.id }}-target_related_extra_prop">{{ config.target_related_extra_prop }}</td>
           <td class="editable" onclick="editTwoRelatedFields(this, {{ config.id }})" data-target-related-extra-prop="{{ config.target_related_extra_prop }}" data-related-extra-prop="{{ config.related_extra_prop }}" id="row-{{ config.id }}-related_extra_prop">{{ config.related_extra_prop }}</td>
+          <td>
+            <div class="button-group">
+              <button class="btn btn-danger" onclick="openDeleteConfirmationModal({{ config.id }})"  title="Delete">
+                <i class="fas fa-trash"></i>
+              </button>
+              <button class="btn btn-primary" onclick="openDuplicateModal({{ config.id }})" title="Duplicate">
+                <i class="fas fa-copy"></i>
+              </button>
+            </div>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
     </table>
+  </div>
+  <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="deleteConfirmationModalLabel">Confirm Delete</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete this record?
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-danger" onclick="deleteRecord()">Delete</button>
+          <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- String Field Modal -->
   <div class="modal fade" id="stringFieldModal" tabindex="-1" role="dialog" aria-labelledby="stringFieldModalLabel" aria-hidden="true">
@@ -153,7 +185,7 @@
         <div class="modal-footer">
           <div class="error-message" id="twoFieldErrorMessage"></div> <!-- Add this line for the error message -->
           <button class="btn btn-primary" onclick="addTwoFields('twoFieldsContainer')">Add</button>
-          <button class="btn btn-success" onclick="newSaveTwoFields()">Done</button>
+          <button class="btn btn-success" onclick="saveTwoFields()">Done</button>
           <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         </div>
       </div>
